--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -75,6 +75,12 @@
     
     .widget{
 
+      &-container{
+        :last-child{
+          margin-bottom: 0px;
+        }
+      }
+
       &-toggle{
         P{
          flex-grow: 0;
